src/objects/Equipment_Owned__c/Equipment_Owned__c.object-meta.xml
<CustomObject>
    <label>Equipment Owned</label>
    <nameField>
        <displayFormat>LASER-{000000}</displayFormat>
        <label>Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Owned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>