src/objects/Equipment_Owned__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End user of the laser</description>
    <inlineHelpText>Laser end user, if different than the Account it is entered on.</inlineHelpText>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipment Owned (End User)</relationshipLabel>
    <relationshipName>Equipment_Owned1</relationshipName>
    <type>Lookup</type>
</CustomField>