src/objects/Equipment_Owned__c/fields/Fiber_Diameter__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Diameter__c</fullName>
    <label>Fiber Diameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>50um</fullName>
            </value>
            <value>
                <fullName>100um</fullName>
            </value>
            <value>
                <fullName>150um</fullName>
            </value>
            <value>
                <fullName>200um</fullName>
            </value>
            <value>
                <fullName>300um</fullName>
            </value>
            <value>
                <fullName>400um</fullName>
            </value>
            <value>
                <fullName>600um</fullName>
            </value>
            <value>
                <fullName>800um</fullName>
            </value>
            <value>
                <fullName>1000um</fullName>
            </value>
            <value>
                <fullName>1500um</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>