src/objects/Equipment_Owned__c/fields/HIGHYAG_S_N__c.field-meta.xml
<CustomField>
    <fullName>HIGHYAG_S_N__c</fullName>
    <label>HIGHYAG S/N</label>
    <length>255</length>
    <type>Text</type>
</CustomField>