src/objects/Equipment_Owned__c/fields/Laser_Status__c.field-meta.xml
<CustomField>
    <fullName>Laser_Status__c</fullName>
    <label>Laser Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Use</fullName>
                <default>true</default>
                <label>In Use</label>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Destroyed</fullName>
            </value>
            <value>
                <fullName>Idle</fullName>
            </value>
            <value>
                <fullName>Spare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>