src/objects/Equipment_Owned__c/fields/Laser_Type__c.field-meta.xml
<CustomField>
    <fullName>Laser_Type__c</fullName>
    <label>Laser Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO2 - Low Power</fullName>
            </value>
            <value>
                <fullName>CO2 - High Power</fullName>
            </value>
            <value>
                <fullName>Fiber</fullName>
            </value>
            <value>
                <fullName>Disk</fullName>
            </value>
            <value>
                <fullName>Nd:YAG</fullName>
            </value>
            <value>
                <fullName>Direct Diode</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>