src/objects/Equipment_Owned__c/fields/Last_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Date__c</fullName>
    <label>Last Date</label>
    <type>Date</type>
</CustomField>