src/objects/Equipment_Owned__c/fields/Lens_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Lens_Lifetime__c</fullName>
    <description>Time since a customer has last changed their lens in the equipment.</description>
    <label>Lens Lifetime</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;6 Months</fullName>
            </value>
            <value>
                <fullName>&gt;6 Months</fullName>
            </value>
            <value>
                <fullName>&gt;1 Year</fullName>
            </value>
            <value>
                <fullName>&gt;2 Years</fullName>
            </value>
            <value>
                <fullName>&gt;3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>