src/objects/Equipment_Owned__c/fields/Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry__c</fullName>
    <label>Primary Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>