src/objects/Equipment_Owned__c/fields/Primary_Material__c.field-meta.xml
<CustomField>
    <fullName>Primary_Material__c</fullName>
    <label>Primary Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>