src/objects/Equipment_Owned__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>25</length>
    <type>Text</type>
</CustomField>