src/objects/Equipment_Owned__c/fields/Resonator__c.field-meta.xml
<CustomField>
    <fullName>Resonator__c</fullName>
    <label>Resonator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>* OTHER</fullName>
            </value>
            <value>
                <fullName>* UNKNOWN</fullName>
            </value>
            <value>
                <fullName>AMADA</fullName>
            </value>
            <value>
                <fullName>BODOR</fullName>
            </value>
            <value>
                <fullName>BYSTRONIC</fullName>
            </value>
            <value>
                <fullName>COHERENT</fullName>
            </value>
            <value>
                <fullName>CONVERGENT ARROW</fullName>
            </value>
            <value>
                <fullName>DATA TECH</fullName>
            </value>
            <value>
                <fullName>EL EN</fullName>
            </value>
            <value>
                <fullName>EPILOG</fullName>
            </value>
            <value>
                <fullName>FANUC</fullName>
            </value>
            <value>
                <fullName>FERANTTI/LASER ECOSSE</fullName>
            </value>
            <value>
                <fullName>GE FANUC</fullName>
            </value>
            <value>
                <fullName>HAN KWANG</fullName>
            </value>
            <value>
                <fullName>IPG</fullName>
            </value>
            <value>
                <fullName>JDSU</fullName>
            </value>
            <value>
                <fullName>JK Laser</fullName>
            </value>
            <value>
                <fullName>Laserline</fullName>
            </value>
            <value>
                <fullName>LASER MECH</fullName>
            </value>
            <value>
                <fullName>LMI</fullName>
            </value>
            <value>
                <fullName>MARKEM</fullName>
            </value>
            <value>
                <fullName>MAZAK</fullName>
            </value>
            <value>
                <fullName>MITSUBISHI</fullName>
            </value>
            <value>
                <fullName>NEL</fullName>
            </value>
            <value>
                <fullName>NO LASER</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>PANASONIC</fullName>
            </value>
            <value>
                <fullName>PRC</fullName>
            </value>
            <value>
                <fullName>ROFIN</fullName>
            </value>
            <value>
                <fullName>ROFIN SINAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>