src/objects/Equipment_Owned__c/fields/Resonator_Model__c.field-meta.xml
<CustomField>
    <fullName>Resonator_Model__c</fullName>
    <label>Resonator Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Resonator__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1200SM</fullName>
            </value>
            <value>
                <fullName>1212HV</fullName>
            </value>
            <value>
                <fullName>1350SM</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
            <value>
                <fullName>1500/2</fullName>
            </value>
            <value>
                <fullName>1508S</fullName>
            </value>
            <value>
                <fullName>15SRP</fullName>
            </value>
            <value>
                <fullName>1700SM</fullName>
            </value>
            <value>
                <fullName>1750</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2000SM</fullName>
            </value>
            <value>
                <fullName>2000 WATT</fullName>
            </value>
            <value>
                <fullName>20CF</fullName>
            </value>
            <value>
                <fullName>20CF LVP</fullName>
            </value>
            <value>
                <fullName>2200</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
            <value>
                <fullName>2512</fullName>
            </value>
            <value>
                <fullName>2512HV</fullName>
            </value>
            <value>
                <fullName>25SRP</fullName>
            </value>
            <value>
                <fullName>2600</fullName>
            </value>
            <value>
                <fullName>2700</fullName>
            </value>
            <value>
                <fullName>2800</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>3000/2</fullName>
            </value>
            <value>
                <fullName>3000RF</fullName>
            </value>
            <value>
                <fullName>3000 WATT</fullName>
            </value>
            <value>
                <fullName>3008S</fullName>
            </value>
            <value>
                <fullName>3015HC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>