src/objects/Equipment_Owned__c/fields/Running_Time_Shifts__c.field-meta.xml
<CustomField>
    <fullName>Running_Time_Shifts__c</fullName>
    <inlineHelpText>Number of shifts per day</inlineHelpText>
    <label>Running Time Shifts</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>