src/objects/Equipment_Owned__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>* OTHER</fullName>
            </value>
            <value>
                <fullName>* UNKNOWN</fullName>
            </value>
            <value>
                <fullName>ACCURIS</fullName>
            </value>
            <value>
                <fullName>ADIGE SALA</fullName>
            </value>
            <value>
                <fullName>Adira</fullName>
            </value>
            <value>
                <fullName>AMADA</fullName>
            </value>
            <value>
                <fullName>BAASEL</fullName>
            </value>
            <value>
                <fullName>BALLIU</fullName>
            </value>
            <value>
                <fullName>Baykal</fullName>
            </value>
            <value>
                <fullName>BEAM DYNAMICS</fullName>
            </value>
            <value>
                <fullName>BEHRENS</fullName>
            </value>
            <value>
                <fullName>BLM Group (Adige)</fullName>
            </value>
            <value>
                <fullName>BODOR</fullName>
            </value>
            <value>
                <fullName>BYSTRONIC</fullName>
            </value>
            <value>
                <fullName>CINCINNATI</fullName>
            </value>
            <value>
                <fullName>CNC Laser Cutting Solutions</fullName>
            </value>
            <value>
                <fullName>COHERENT</fullName>
            </value>
            <value>
                <fullName>Cutlite Penta</fullName>
            </value>
            <value>
                <fullName>CY LASER</fullName>
            </value>
            <value>
                <fullName>DAIHEN</fullName>
            </value>
            <value>
                <fullName>Danobat</fullName>
            </value>
            <value>
                <fullName>DATATECH</fullName>
            </value>
            <value>
                <fullName>DOMINO</fullName>
            </value>
            <value>
                <fullName>Durma</fullName>
            </value>
            <value>
                <fullName>Durmazlar</fullName>
            </value>
            <value>
                <fullName>EAGLE LASERS</fullName>
            </value>
            <value>
                <fullName>Eckert</fullName>
            </value>
            <value>
                <fullName>ELCEDE</fullName>
            </value>
            <value>
                <fullName>ELECTROX</fullName>
            </value>
            <value>
                <fullName>EL EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>