src/objects/Equipment_Owned__c/fields/System_Model__c.field-meta.xml
<CustomField>
    <fullName>System_Model__c</fullName>
    <label>System Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>System__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1005</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1212</fullName>
            </value>
            <value>
                <fullName>1212HC</fullName>
            </value>
            <value>
                <fullName>1212HV</fullName>
            </value>
            <value>
                <fullName>15SPR 2512H2</fullName>
            </value>
            <value>
                <fullName>15SPR 806T2</fullName>
            </value>
            <value>
                <fullName>15SRP 1212H2</fullName>
            </value>
            <value>
                <fullName>2015-VZ-1</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2503</fullName>
            </value>
            <value>
                <fullName>2503 AUTOLAS</fullName>
            </value>
            <value>
                <fullName>2503 PLUS</fullName>
            </value>
            <value>
                <fullName>2510</fullName>
            </value>
            <value>
                <fullName>2510 AUTOLAS</fullName>
            </value>
            <value>
                <fullName>2510 PLUS</fullName>
            </value>
            <value>
                <fullName>2512</fullName>
            </value>
            <value>
                <fullName>2512HV</fullName>
            </value>
            <value>
                <fullName>2512LX</fullName>
            </value>
            <value>
                <fullName>2512LXP</fullName>
            </value>
            <value>
                <fullName>2512LZP</fullName>
            </value>
            <value>
                <fullName>2520</fullName>
            </value>
            <value>
                <fullName>2525</fullName>
            </value>
            <value>
                <fullName>2530</fullName>
            </value>
            <value>
                <fullName>2530 AUTOLAS</fullName>
            </value>
            <value>
                <fullName>2530 PLUS</fullName>
            </value>
            <value>
                <fullName>25SPR 1212H2</fullName>
            </value>
            <value>
                <fullName>25SPR 2512H2</fullName>
            </value>
            <value>
                <fullName>25SPR 806T2</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>