src/objects/Equipment_Owned__c/fields/Watt__c.field-meta.xml
<CustomField>
    <fullName>Watt__c</fullName>
    <label>Watt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>* UNKNOWN</fullName>
            </value>
            <value>
                <fullName>&lt;100 watts</fullName>
            </value>
            <value>
                <fullName>100-500 watts</fullName>
            </value>
            <value>
                <fullName>501-999 watts</fullName>
            </value>
            <value>
                <fullName>1000-2000 watts</fullName>
            </value>
            <value>
                <fullName>2001-3000 watts</fullName>
            </value>
            <value>
                <fullName>3001-4000 watts</fullName>
            </value>
            <value>
                <fullName>4001-5000 watts</fullName>
            </value>
            <value>
                <fullName>5001-6000 watts</fullName>
            </value>
            <value>
                <fullName>&gt;6000 watts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>