src/objects/Equipment_Owned__c/fields/Year_Manufactured__c.field-meta.xml
<CustomField>
    <fullName>Year_Manufactured__c</fullName>
    <label>Year Manufactured</label>
    <length>25</length>
    <type>Text</type>
</CustomField>